# simple-localize

./: .gitignore  LICENSE  README.md  example_usage.py  localizer.py  pyproject.toml  translations.json
.github/workflows/: publish.yml
simple_localize/: __init__.py
