[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-localize"
version = "1.0.0"
description = "A simple, thread-safe Python module for easy localization (multilingual support)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thibault Savenkoff" }]
requires-python = ">=3.8"
keywords = ["localization", "i18n", "translation", "multilingual"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Thibault-Savenkoff/simple-localize"
