[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-localize"
version = "1.0.0"
description = "A simple, thread-safe Python module for easy localization (multilingual support)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thibault Savenkoff", email = "ganon0044@gmail.com" }]
requires-python = ">=3.8"
keywords = ["localization", "i18n", "translation", "multilingual", "internationalization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/Thibault-Savenkoff/simple-localize"
"Bug Tracker" = "https://github.com/Thibault-Savenkoff/simple-localize/issues"
